--- a/src/app/about-page-extended/about-page-extended.component.html
+++ b/src/app/about-page-extended/about-page-extended.component.html
@@ -3,9 +3,11 @@
         <div class="md:text-5xl text-xl font-extrabold">
             OUR HACKATHON
         </div>
-        <div class="text-white md:text-lg text-xs">
-            BEST Mostar is organizing a Hackathon from February 21 to 23, 2025, at INTERA Technology Park. A total of 100 participants will compete in creating web applications, divided into teams of 3 to 5 members. The competition will last 35 hours, and the top 3 teams will win cash prizes. Meals and refreshments will be provided for all participants.            
-        </div>
+        <div class="text-white md:text-lg text-xs md:py-0 py-10">
+            BEST Mostar is organizing a Hackathon from February 21 to 23, 2025, at INTERA Technology Park. A total of 100 participants will compete in creating web applications, divided into teams of 3 to 5 members. The competition will last 35 hours, and the top 3 teams will win cash prizes. Meals and refreshments will be provided for all participants.
+            <br>
+            This project was made possible by the generous support of the American people through the United States Agency for International Development (USAID).      
+          </div>
         <div class="flex flex-row justify-center items-center">
             <div class="w-1/4 h-auto">
                 <img src="../../assets/USAID.png">
@@ -14,7 +16,7 @@
                 <img src="../../assets/LDA.png">
             </div>
             <div class="w-1/4 h-auto">
-                <img src="../../assets/best-logo.png">
+                <img src="../../assets/mreza-za-izgradnju-mira.png">
             </div>
             <div class="w-1/4 h-auto">
                 <img src="../../assets/intera.png">
