--- a/src/app/about-page-extended/about-page-extended.component.html
+++ b/src/app/about-page-extended/about-page-extended.component.html
@@ -1,9 +1,9 @@
-<div class=" flex flex-row md:w-2/3 w-auto mx-auto">
+<div id="about" class=" flex flex-row md:w-2/3 w-auto mx-auto">
     <div class="w-1/2 my-2 ml-2  md:p-20 p-4 bg-hack-silver flex items-center flex-col justify-between md:py-20 text-white">
         <div class="md:text-5xl text-xl font-extrabold">
             OUR HACKATHON
         </div>
-        <div class="text-white md:text-lg text-xs md:py-0 py-10">
+        <div  class="text-white md:text-lg text-xs md:py-0 py-10">
             BEST Mostar is organizing a Hackathon from February 21 to 23, 2025, at INTERA Technology Park. A total of 100 participants will compete in creating web applications, divided into teams of 3 to 5 members. The competition will last 35 hours, and the top 3 teams will win cash prizes. Meals and refreshments will be provided for all participants.
             <br>
             This project was made possible by the generous support of the American people through the United States Agency for International Development (USAID).      
