--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -10,7 +10,7 @@
             IT'S TIME TO START CODING!
         </h1>
         <div class="md:mt-10">
-            <a href="#" class="bg-white text-black px-4 py-2 md:text-xl w-fit mx-auto text-xs  font-extrabold tracking-widest hover:bg-rose-600">LEARN MORE</a>
+            <a href="#about" class="bg-white text-black px-4 py-2 md:text-xl w-fit mx-auto text-xs  font-extrabold tracking-widest hover:bg-rose-600">LEARN MORE</a>
         </div>
     </div>
     <div class="w-1/3 flex justify-center items-center">
