--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
         <div class="text-5xl sm:text-7xl font-bold text-hack-yellow">MOSTAR</div>
         <div class="text-5xl sm:text-7xl font-bold text-white">HACKATHON</div>
         <div class="md:text-xl text-sm text-white my-5" >Join innovative minds, tackle exciting challenges, <br> and turn ideas into reality.<br> The clock is ticking!</div>
-        <a href="#" class="bg-hack-rose hidden md:block text-white px-4 py-2 md:text-xl w-fit mx-auto md:mx-0 mb-5 text-lg font-extrabold tracking-widest hover:bg-rose-600">APPLY</a>
+        <a href="#apply" class="bg-hack-rose hidden md:block text-white px-4 py-2 md:text-xl w-fit mx-auto md:mx-0 mb-5 text-lg font-extrabold tracking-widest hover:bg-rose-600">APPLY</a>
        
     </div>
     <div class="w-2/3 md:w-1/2 flex justify-center">
