--- a/src/app/about-page-extended/about-page-extended.component.html
+++ b/src/app/about-page-extended/about-page-extended.component.html
@@ -1,9 +1,9 @@
-<div id="about" class=" flex flex-row md:w-2/3 w-auto mx-auto">
-    <div class="w-1/2 my-2 ml-2  md:p-20 p-4 bg-hack-silver flex items-center flex-col justify-between md:py-20 text-white">
-        <div class="md:text-5xl text-xl font-extrabold">
-            OUR HACKATHON
+<div id="about" class=" flex md:flex-row flex-col md:w-2/3 w-auto mx-auto">
+    <div class="md:w-1/2 md:my-2 w-auto md:p-20 mb-0 p-4 mx-2 md:mx-0 bg-hack-silver flex items-center flex-col justify-between md:py-20 text-white">
+        <div class="md:text-5xl text-4xl font-extrabold text-center text-hack-yellow ">
+            OUR <br> HACKATHON
         </div>
-        <div  class="text-white md:text-lg text-xs md:py-0 py-10">
+        <div  class="text-white md:text-lg text-sm md:py-0 py-10">
             BEST Mostar is organizing a Hackathon from February 21 to 23, 2025, at INTERA Technology Park. A total of 100 participants will compete in creating web applications, divided into teams of 3 to 5 members. The competition will last 35 hours, and the top 3 teams will win cash prizes. Meals and refreshments will be provided for all participants.
             <br>
             This project was made possible by the generous support of the American people through the United States Agency for International Development (USAID).      
@@ -24,25 +24,25 @@
 
         </div>
     </div>
-    <div class="w-1/2 h-auto flex flex-col justify-between">
+    <div class="md:w-1/2 w-auto h-auto flex flex-col justify-between">
 
         <div class="flex m-2 md:p-20 mb-0 p-5 h-1/3 bg-hack-rose items-center">
             <div class="">
-                <fa-icon [icon]="faMapLocationDot" class="md:text-7xl text-lg"></fa-icon>
+                <fa-icon [icon]="faMapLocationDot" class="md:text-7xl text-lg text-hack-silver"></fa-icon>
             </div>
             <div class="md:text-4xl text-sm md:pl-10 pl-5">INTERA Technology Park</div>
         </div>
 
         <div class="flex m-2 md:p-20 p-5 h-1/3 bg-hack-rose items-center">
             <div class="">
-                <fa-icon [icon]="faDollarSign" class="md:text-7xl text-lg"></fa-icon>
+                <fa-icon [icon]="faDollarSign" class="md:text-7xl text-lg text-hack-silver"></fa-icon>
             </div>
             <div class="md:text-4xl text-sm md:pl-10 pl-5">3000KM PRIZES</div>
         </div>
 
-        <div class="flex m-2 md:p-20 mt-0 p-5 h-1/3 bg-hack-rose items-center">
+        <div class="flex m-2 md:p-20 mt-0 p-5 h-1/3 bg-hack-rose items-center ">
             <div class="">
-                <fa-icon [icon]="faClock" class="md:text-7xl text-lg"></fa-icon>
+                <fa-icon [icon]="faClock" class="md:text-7xl text-lg text-hack-silver"></fa-icon>
             </div>
             <div class="md:text-4xl text-sm md:pl-10 pl-5">35H CODING</div>
         </div>
