--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -6,11 +6,11 @@
         <h2 class="md:text-5xl text-xs text-white font-medium">
             21 FEB - 23 FEB 2025
         </h2>
-        <h1 class="md:text-8xl text-sm font-extrabold mt-2 mb-4 text-white tracking-tighter">
+        <h1 class="md:text-8xl text-3xl font-Teko font-bold mt-2 mb-4 text-white">
             IT'S TIME TO START CODING!
         </h1>
         <div class="md:mt-10">
-            <a href="#about" class="bg-white text-black px-4 py-2 md:text-xl w-fit mx-auto text-xs  font-extrabold tracking-widest hover:bg-rose-600">LEARN MORE</a>
+            <a href="#about" class="bg-white text-black px-4 py-2 md:text-xl w-fit mx-auto text-xs font-Teko font-extrabold tracking-widest hover:bg-rose-600">LEARN MORE</a>
         </div>
     </div>
     <div class="w-1/3 flex justify-center items-center">
