--- a/src/app/sign-up-page/sign-up-page.component.html
+++ b/src/app/sign-up-page/sign-up-page.component.html
@@ -1,5 +1,5 @@
 <div id="apply" class="flex flex-col md:auto w-auto mx-auto items-center my-20">
-    <div class="md:text-8xl text-4xl font-semibold text-center text-hack-yellow">LET'S APPLY TO BEST HACKATHON</div>
+    <div class="md:text-8xl text-4xl font-semibold text-center font-Teko text-hack-yellow">LET'S APPLY TO BEST HACKATHON</div>
     <div class="flex md:flex-row flex-col m-auto w-2/3 md:py-20 py-10 justify-center items-center">
 
         <div class="text-white md:w-1/2 w-full flex">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="text-white text-lg font-medium md:w-1/2 m-auto">
                     <div class="my-10 text-left">
-                        All done? Great! It's time to apply using our Google form. Don't forget to upload newly created CV! <div class="text-green-600 underline">Applications are open until 2.2.2025 &#64; 20:00</div>
+                        All done? Great! It's time to apply using our Google form. Don't forget to upload newly created CV! <div class="text-green-600 underline">Applications are open until 2.2.2025. &#64; 20:00</div>
                     </div>
                     <div class="text-center">
                         <button  class="button-30 w-full" role="button" (click)="goToGoogleForm()"><fa-icon [icon]="faCheckToSlot"></fa-icon>Apply</button>
