--- a/src/app/sign-up-page/sign-up-page.component.html
+++ b/src/app/sign-up-page/sign-up-page.component.html
@@ -25,10 +25,10 @@
                 </div>
                 <div class="text-white text-lg font-medium md:w-1/2 m-auto">
                     <div class="my-10 text-left">
-                        All done? Great! It's time to apply using our Google form. Don't forget to upload newly created CV! <div class="text-green-600 underline">Applications are open until 7.2.2025. &#64; 20:00</div>
+                        All done? Great! It's time to apply using our Google form. Don't forget to upload newly created CV! <br><br> <div class="text-white">Applications are closed!</div>
                     </div>
                     <div class="text-center">
-                        <button  class="button-30 w-full" role="button" (click)="goToGoogleForm()"><fa-icon [icon]="faCheckToSlot"></fa-icon>Apply</button>
+                        <button  class="button-30 w-full opacity-50 pointer-events-none" role="button"><fa-icon [icon]="faCheckToSlot"></fa-icon>Apply</button>
                     </div>
                 </div>
             </div>
